--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "JavaScript console Hangman game",
   "main": "app.js",
   "dependencies": {
+    "clear": "^0.1.0",
     "readline": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
