--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clear": "^0.1.0",
     "readline": "^1.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^6.0.2"
+  },
   "scripts": {
     "start": "node app.js"
   },
