--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mocha": "^6.0.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
