--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "clear": "^0.1.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.9"
   },
   "devDependencies": {
     "mocha": "^6.0.2"
   },
   "scripts": {
-    "start": "node app.js",
     "test": "mocha"
   },
   "repository": {
