--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "clear": "^0.1.0",
+    "fs": "0.0.1-security",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.9"
   },
